session-12-ingress-configmaps-secrets/04-full-demo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mayankapp-frontend
  labels:
    app: mayankapp
    tier: frontend
    owner: mayank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mayankapp
      tier: frontend
  template:
    metadata:
      labels:
        app: mayankapp
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: mayankapp-frontend-html
---
apiVersion: v1
kind: Service
metadata:
  name: mayankapp-frontend
  labels:
    app: mayankapp
    tier: frontend
    owner: mayank
spec:
  type: ClusterIP
  selector:
    app: mayankapp
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
